kubernetes/influxdb/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  namespace: influxdb
spec:
  routes:
    - kind: Rule
      match: Host(`influx.garrettholland.com`)
      services:
        - kind: Service
          name: influxdb-service
          port: 8086
